Finished the graph section

--- a/index.html
+++ b/index.html
@@ -24,13 +24,39 @@
     <h1>Spending - Last 7 days</h1>
 
     <div class="week">
-      <p>mon</p>
-      <p>tue</p>
-      <p>wed</p>
-      <p>thu</p>
-      <p>fri</p>
-      <p>sat</p>
-      <p>sun</p>
+      <div class="day-container">
+        <div class='monday'></div>
+        <p>mon</p>
+      </div>
+      <div class="day-container">
+        <div class='tuesday '></div>
+        <p>tue</p>
+      </div>
+      <div class="day-container">
+      
+        <div class='wednesday '>
+          <p class="hover box1">$52.36</p>
+        </div>
+        <p>wed</p>
+      </div>
+      <div class="day-container">
+        <div class='thursday'>
+          <p class="hover box2">$31.07</p>
+        </div>
+        <p>thu</p>
+      </div>
+      <div class="day-container">
+        <div class='friday '></div>
+        <p>fri</p>
+      </div>
+      <div class="day-container">
+        <div class='saturday '></div>
+        <p>sat</p>
+      </div>
+      <div class="day-container">
+        <div class='sunday'></div>
+        <p>sun</p>
+      </div>
     </div>
 
     <p>Total this month</p>
