Make the website responsive

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p>tue</p>
       </div>
       <div class="day-container">
-      
+
         <div class='wednesday '>
           <p class="hover box1">$52.36</p>
         </div>
@@ -59,11 +59,15 @@
       </div>
     </div>
 
-    <p>Total this month</p>
-    <p>$478.33</p>
-    <div>
-      <p>+2.4%</p>
-      <p>from last month</p>
+    <div class="flex-container">
+      <div class="this-month">
+        <p>Total this month</p>
+        <p>$478.33</p>
+      </div>
+      <div class="last-month">
+        <p>+2.4%</p>
+        <p>from last month</p>
+      </div>
     </div>
   </section>
   <script src="./script.js"></script>
