--- a/index.html
+++ b/index.html
@@ -25,36 +25,51 @@
 
     <div class="week">
       <div class="day-container">
-        <div class='monday'></div>
+        <div class='monday'>
+          <p class="hover box1">$17.45</p>
+        </div>
         <p>mon</p>
       </div>
+
       <div class="day-container">
-        <div class='tuesday '></div>
+        <div class='tuesday '>
+          <p class="hover box2">$ 34.91</p>
+        </div>
         <p>tue</p>
       </div>
-      <div class="day-container">
 
+      <div class="day-container">
         <div class='wednesday '>
-          <p class="hover box1">$52.36</p>
+          <p class="hover box3">$52.36</p>
         </div>
         <p>wed</p>
       </div>
+
       <div class="day-container">
         <div class='thursday'>
-          <p class="hover box2">$31.07</p>
+          <p class="hover box4">$31.07</p>
         </div>
         <p>thu</p>
       </div>
+
       <div class="day-container">
-        <div class='friday '></div>
+        <div class='friday '>
+          <p class="hover box5">$23.39</p>
+        </div>
         <p>fri</p>
       </div>
+
       <div class="day-container">
-        <div class='saturday '></div>
+        <div class=' saturday'>
+          <p class="hover box6">$43.28</p>
+        </div>
         <p>sat</p>
       </div>
+
       <div class="day-container">
-        <div class='sunday'></div>
+        <div class='sunday'>
+          <p class="hover box7">$25.48</p>
+        </div>
         <p>sun</p>
       </div>
     </div>
